--- a/components/layout/header/header-search.css
+++ b/components/layout/header/header-search.css
@@ -129,3 +129,9 @@
         /* Hide on mobile for now, or adapt */
     }
 }
+
+@media (min-width: 1025px) and (max-width: 1439px) {
+    .header-search-wrapper {
+        max-width: 200px;
+    }
+}
