--- a/components/layout/header/header-search.css
+++ b/components/layout/header/header-search.css
@@ -1,9 +1,10 @@
 /* Header Search Bar Styling */
 .header-search-container {
     position: relative;
-    flex: 1;
+    /* flex: 1; - Removed to prevent pushing out */
     display: flex;
     justify-content: flex-end;
+    margin-left: 0.5rem;
 }
 
 .header-search-wrapper {
@@ -130,8 +131,13 @@
     }
 }
 
-@media (min-width: 1025px) and (max-width: 1439px) {
+@media (min-width: 1025px) and (max-width: 1366px) {
     .header-search-wrapper {
-        max-width: 200px;
+        max-width: 160px;
+        padding-left: 10px;
+    }
+
+    .header-search-input {
+        font-size: 0.8125rem;
     }
 }
