--- a/components/layout/footer/footer.css
+++ b/components/layout/footer/footer.css
@@ -507,11 +507,11 @@
 
 .footer-initiative-strip .parent-brand-text {
     margin-bottom: 0;
-    font-size: 0.75rem;
+    font-size: 1.5rem;
     font-weight: 800;
-    max-width: 450px;
+    max-width: 800px;
     line-height: 1.5;
-    text-transform: uppercase;
+    text-transform: none;
     letter-spacing: 0.15em;
     background: linear-gradient(to bottom,
             #ffffff 0%,
